objects/ASI_JP_CRM_Business_Day_Calendar__c.object
<CustomObject>
    <description>For JPCRM3</description>
    <fields>
        <fullName>ASI_Business_Day__c</fullName>
        <label>Business Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_PR_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show whether PR Japan is working</description>
        <label>PR Working</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_Shipping_Company__c</fullName>
        <description>Shipping Company Name</description>
        <label>Shipping Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_WS_Working__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show whether Wholesaler Company (e.g. Mitsubishi) is working</description>
        <label>WS Working</label>
        <type>Checkbox</type>
    </fields>
    <label>Business Day Calendar</label>
    <listViews>
        <fullName>All_JP_Business_Calendar</fullName>
        <columns>NAME</columns>
        <columns>ASI_Business_Day__c</columns>
        <columns>ASI_WS_Working__c</columns>
        <columns>ASI_PR_Working__c</columns>
        <filterScope>Everything</filterScope>
        <label>All JP Business Calendar</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Day Calendars</pluralLabel>
    <recordTypes>
        <fullName>ASI_JP_CRM_Business_Day_Calendar</fullName>
        <active>true</active>
        <description>For JP business calendar</description>
        <label>JP CRM Business Day Calendar</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>